// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EdgeBadge renders badge if passed 1`] = `
<div
  className="dm-badge"
  style={
    Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    }
  }
>
  <div
    className="dm-badge-inner"
    data-event-target={true}
    data-id="testBadge"
    data-type="DiagramMaker.EdgeBadge"
  >
    <ComposeView
      destroyCallback={[MockFunction]}
      renderCallback={[MockFunction]}
    />
  </div>
</div>
`;

exports[`EdgeBadge renders badge when isPartOfEdgePair is true 1`] = `
<div
  className="dm-badge"
  style={
    Object {
      "height": 100,
      "left": -25,
      "top": -25,
      "width": 100,
    }
  }
>
  <div
    className="dm-badge-inner"
    data-event-target={true}
    data-id="overlappingBadge"
    data-type="DiagramMaker.EdgeBadge"
  >
    <ComposeView
      destroyCallback={[MockFunction]}
      renderCallback={[MockFunction]}
    />
  </div>
</div>
`;
